# Meridian

./: .env.example  README.md  TODO.md  main.py  pyproject.toml  tailwind.config.ts  tsconfig.json
app/: globals.css
app/(app)/: layout.tsx
app/(app)/compare/: page.tsx
app/(app)/projects/: page.tsx
app/(app)/results/: page.tsx
app/(app)/search/: page.tsx
app/(auth)/sign-in/: page.tsx
app/(auth)/sign-up/: page.tsx
app/api/[transport]/: route.ts
app/auth/callback/: route.ts
componenthub_mcp/: __init__.py  config.py  coordinator.py  export.py  models.py  server.py
componenthub_mcp/providers/: __init__.py  base.py  demo.py  digikey.py  mouser.py  snapmagic.py
components/auth/: AuthForm.tsx
components/compare/: CompareClient.tsx  CompareTray.tsx
components/copilot/: CopilotBar.tsx  rules.ts
components/detail/: DetailClient.tsx  DetailHeader.tsx  Tab3d.tsx  TabAlternatives.tsx  TabCad.tsx  TabDatasheet.tsx  TabOverview.tsx  TabPinout.tsx  TabPricing.tsx  index.ts
components/modals/: McpModal.tsx  NewProjectModal.tsx  ProfileModal.tsx  SourcesModal.tsx
components/projects/list/: EmptyState.tsx  ProjectRow.tsx  ProjectsTable.tsx  index.tsx
components/results/: ParsingInterstitial.tsx  ResultsCards.tsx  ResultsContent.tsx  ResultsTable.tsx  RightRail.tsx
components/search/: HomePanels.tsx  SearchHero.tsx
components/shell/: ModalHost.tsx
docs/: copilot-upgrade.md
lib/data/: mcpKeys.ts
lib/domain/providers/: digikey.ts  lcsc.ts  (+4 more)
lib/supabase/: admin.ts
supabase/migrations/: 0002_lock_down_handle_new_user.sql  0003_mcp_api_keys.sql
(+14 files in other folders)
